--- a/J-Series.html
+++ b/J-Series.html
@@ -166,7 +166,7 @@
           </figure>
           <figure class="figure">
              <img src="img/series/2020-Ragnarok.jpg" class="figure-img rounded" alt="..." width="200" height="300">
-            <figcaption class="figure-caption">Ragnaro</figcaption>
+            <figcaption class="figure-caption">Ragnarok</figcaption>
             
           </figure>
           <figure class="figure">
