--- a/Sagas Comedia.html
+++ b/Sagas Comedia.html
@@ -16,10 +16,11 @@
   <div class="Background1">
     <div class="img">
       <div>
-      <img src="img/0-Animeteca Logo - copia.png" alt="" width="50%" height="50%">
+		  <img src="img/0-Animeteca Logo - copia.png" class="img-fluid" alt="...">
+      <!-- <img src="" alt="" width="50%" height="50%"> -->
       </div>
       <div>
-      <img src="img/3.png" alt="" width="400" height="536">
+	  <img src="img/3.png" class="img-fluid" alt="...">
     </div>
     </div>
 </div>
@@ -70,8 +71,9 @@
 	<div><h1>3 Ninjas</h1></div>
 	<figure class="figure">
 		<img src="img/comedia/3 Ninjas 1.jpg" class="figure-img rounded"  width="200" height="300">
-		<figcaption class="figure-caption">3 Ninjas</figcaption>
-		<figcaption class="figure-caption">...</figcaption>
+		<figcaption class="figure-caption">3 Ninjas 2</figcaption>
+		<figcaption class="figure-caption">Al rescate</figcaption>
+	</figure>	
 	</figure>
 	<figure class="figure">
 		<img src="img/comedia/3 ninjas 2-Al rescate.jpg" class="figure-img rounded"  width="200" height="300">
@@ -81,7 +83,7 @@
 	<figure class="figure">
 		<img src="img/comedia/3 ninjas 3-Al ataque.jpg" class="figure-img rounded"  width="200" height="300">
 		<figcaption class="figure-caption">3 Ninjas 3</figcaption>
-		<figcaption class="figure-caption">Al ataqu</figcaption>
+		<figcaption class="figure-caption">Al ataque</figcaption>
 	</figure>
 	<figure class="figure">
 		<img src="img/comedia/3 ninjas 4-En el parque Mega Mountain.jpg" class="figure-img rounded"  width="200" height="300">
