--- a/Sagas Accion.html
+++ b/Sagas Accion.html
@@ -221,11 +221,11 @@
   <div><h1>Escape From</h1></div>
   <figure class="figure">
     <img src="img/accion/Escape from 1 New York.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Escape from 1 New York</figcaption>
+    <figcaption class="figure-caption">Escape from New York</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Escape from 2 L.A..jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Escape from 2 L.A</figcaption>
+    <figcaption class="figure-caption">Escape from L.A</figcaption>
   </figure>
 </div>
 
@@ -366,11 +366,11 @@
   </figure>
    <figure class="figure">
     <img src="img/accion/Marvel-03-(2008)Iron Man.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Iron Man 2</figcaption>
+    <figcaption class="figure-caption">Iron Man 1</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Marvel-04-(2010)Iron Man 2.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">101 Dalmatas 2</figcaption>
+    <figcaption class="figure-caption">Iron Man 2</figcaption>
   </figure>
 </div>
 
@@ -408,7 +408,7 @@
   </figure>
   <figure class="figure">
     <img src="img/accion/Marvel-12-(2014)Captain America 2 The Winter Soldier.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Captain America 2 The Winter Soldier</figcaption>
+    <figcaption class="figure-caption">Captain America The Winter Soldier</figcaption>
   </figure>
 </div>
 
@@ -438,7 +438,7 @@
   </figure>
   <figure class="figure">
     <img src="img/accion/Marvel-18-(2017)Spider-Man Homecoming.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Spider-Man Homecomin</figcaption>
+    <figcaption class="figure-caption">Spider-Man Homecoming</figcaption>
   </figure>
    <figure class="figure">
     <img src="img/accion/Marvel-19-(2016)Doctor Strange.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
@@ -457,11 +457,11 @@
   </figure>
   <figure class="figure">
     <img src="img/accion/Marvel-22-(2019)The Avengers End Game.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">The Avengers End Game/figcaption>
+    <figcaption class="figure-caption">The Avengers End Game</figcaption>
   </figure>
    <figure class="figure">
     <img src="img/accion/Marvel-23-(2019)Spider-Man Far from Home.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Spider-Man 2 Far from Home</figcaption>
+    <figcaption class="figure-caption">Spider-Man Far from Home</figcaption>
   </figure>
   
 </div>
@@ -497,7 +497,7 @@
   </figure>
   <figure class="figure">
     <img src="img/accion/Matrix 1.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Matrix Recargado</figcaption>
+    <figcaption class="figure-caption">Matrix</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Matrix 3.jpg" class="figure-img rounded" alt="" width="200" height="300">
@@ -543,7 +543,7 @@
   <div><h1>Mortal Kombat</h1></div>
   <figure class="figure">
     <img src="img/accion/Mortal Kombat 1.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Mortal Kombat 2</figcaption>
+    <figcaption class="figure-caption">Mortal Kombat</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Mortal Kombat 2.jpg" class="figure-img rounded" alt="" width="200" height="300">
@@ -560,36 +560,45 @@
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 1.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
     <figcaption class="figure-caption">El planeta de los simios 1</figcaption>
+    <figcaption class="figure-caption">...</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 2.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Regreso al planeta de los simios</figcaption>
+    <figcaption class="figure-caption">Regreso</figcaption>
+        <figcaption class="figure-caption">Al Planeta de los Simios</figcaption>
+
   </figure>
    <figure class="figure">
     <img src="img/accion/Planet of the Apes 3.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Escape del planeta de los simios</figcaption>
+    <figcaption class="figure-caption">Escape</figcaption>
+    <figcaption class="figure-caption">Al Planeta de los Simios</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 4.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Conquista del planeta de los simios</figcaption>
+    <figcaption class="figure-caption">Conquista</figcaption>
+    <figcaption class="figure-caption">Al Planeta de los Simios</figcaption>
   </figure>
 </div>
 <div class="text-center">
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 5.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">La batalla por el planeta de los simios</figcaption>
-  </figure>
+    <figcaption class="figure-caption">La Batalla</figcaption>
+    <figcaption class="figure-caption">Por el Planeta de los Simios</figcaption>
+</figure>
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 6.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">El origen del planeta de los simios</figcaption>
+    <figcaption class="figure-caption">El Origens</figcaption>
+    <figcaption class="figure-caption">Del Planeta de los Simios</figcaption>
   </figure>
    <figure class="figure">
     <img src="img/accion/Planet of the Apes 7.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">El amanecer del planeta de los simios</figcaption>
+    <figcaption class="figure-caption">El Amanecer</figcaption>
+  <figcaption class="figure-caption">Del Planeta de los Simios</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Planet of the Apes 8.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">La guerra del planeta de los simios</figcaption>
+    <figcaption class="figure-caption">La Guerra</figcaption>
+    <figcaption class="figure-caption">Del Planeta de los Simios</figcaption>
   </figure>
 </div>
 
@@ -598,24 +607,31 @@
   <figure class="figure">
     <img src="img/accion/Rambo 1.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
     <figcaption class="figure-caption">Rambo 1</figcaption>
+    <figcaption class="figure-caption">First Blood Part 1</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Rambo 2.jpg" class="figure-img rounded" alt="" width="200" height="300">
     <figcaption class="figure-caption">Rambo 2</figcaption>
+    <figcaption class="figure-caption">First Blood Part 2</figcaption>
   </figure>
    <figure class="figure">
     <img src="img/accion/Rambo 3.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">1Rambo 3</figcaption>
+    <figcaption class="figure-caption">Rambo 3</figcaption>
+     <figcaption class="figure-caption">First Blood Part 3</figcaption>
+      
   </figure>
   <figure class="figure">
     <img src="img/accion/Rambo 4.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">Rambo 41</figcaption>
+    <figcaption class="figure-caption">Rambo 4</figcaption>
+    <figcaption class="figure-caption">Jhon Rambo</figcaption>
+   
   </figure>
 </div>
 <div class="text-center">
   <figure class="figure">
     <img src="img/accion/Rambo 5.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
     <figcaption class="figure-caption">Rambo 5</figcaption>
+      <figcaption class="figure-caption">Last Blood</figcaption>
   </figure>
 </div>
 
@@ -623,15 +639,15 @@
   <div><h1>Robocop</h1></div>
   <figure class="figure">
     <img src="img/accion/Robocop 1.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">101 Dalmatas 1</figcaption>
+    <figcaption class="figure-caption">Robocop 1</figcaption>
   </figure>
   <figure class="figure">
     <img src="img/accion/Robocop 2.jpg" class="figure-img rounded" alt="" width="200" height="300">
-    <figcaption class="figure-caption">101 Dalmatas 2</figcaption>
+    <figcaption class="figure-caption">Robocop 2</figcaption>
   </figure>
    <figure class="figure">
     <img src="img/accion/Robocop 3.jpg" class="figure-img rounded" title="" alt="" width="200" height="300">
-    <figcaption class="figure-caption">101 Dalmatas 1</figcaption>
+    <figcaption class="figure-caption">Robocop 3</figcaption>
   </figure>
 </div>
 
