--- a/J-Anime+Live Actions.html
+++ b/J-Anime+Live Actions.html
@@ -13,16 +13,16 @@
 </head>
 
 <body>
-	<div class="Background1">
-		<div class="img">
-			<div>
-				<img src="img/0-Animeteca Logo - copia.png" alt="" width="50%" height="50%">
-			</div>
-			<div>
-				<img src="img/3.png" alt="" width="400" height="536">
-			</div>
-		</div>
-	</div>
+ <div class="Background1">
+    <div class="img">
+      <div>
+		  <img src="img/0-Animeteca Logo - copia.png" class="img-fluid" alt="...">
+		        </div>
+      <div>
+	  <img src="img/3.png" class="img-fluid" alt="...">
+    </div>
+    </div>
+</div>
 
 <div>
    <h1 class="list">
