--- a/Sagas Fantasia.html
+++ b/Sagas Fantasia.html
@@ -16,10 +16,10 @@
   <div class="Background1">
     <div class="img">
       <div>
-      <img src="img/0-Animeteca Logo - copia.png" alt="" width="50%" height="50%">
-      </div>
+		  <img src="img/0-Animeteca Logo - copia.png" class="img-fluid" alt="...">
+		        </div>
       <div>
-      <img src="img/3.png" alt="" width="400" height="536">
+	  <img src="img/3.png" class="img-fluid" alt="...">
     </div>
     </div>
 </div>
