--- a/Sagas Accion.html
+++ b/Sagas Accion.html
@@ -13,13 +13,13 @@
   </head>
 
 <body>
-  <div class="Background1">
+ <div class="Background1">
     <div class="img">
       <div>
-		  <img src="img/0-Animeteca Logo - copia.png" class="img-fluid" alt="...">
-		        </div>
+		  <img src="img/1.png" class="img-fluid" alt="..." width="50%">
+		 </div>
       <div>
-	  <img src="img/3.png" class="img-fluid" alt="...">
+	  <img src="img/2.png" class="img-fluid" alt="..." width="25%">
     </div>
     </div>
 </div>
