--- a/J-Anime+Live Actions.html
+++ b/J-Anime+Live Actions.html
@@ -33,32 +33,32 @@
  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-	 <figure class="figure">
-      <img src="img/estrenos/13.jpg" class="" alt="..." width="400" height="600">
-	  <figcaption class="figure-caption">Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</figcaption>
-	  </figure>
-	  <figure class="figure">
-      <img src="img/estrenos/14.jpg" class="" alt="..." width="400" height="600">
-	   <figcaption class="figure-caption">86 - Eighty Six</figcaption>
-	  </figure>
+     <figure class="figure">
+      <img src="img/estrenos/13.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
       <figure class="figure">
-      <img src="img/estrenos/15.jpg" class="" alt="..." width="400" height="600">
-	   <figcaption class="figure-caption">Tokyo Revengers</figcaption>
-	  </figure>
+      <img src="img/estrenos/14.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
+      <figure class="figure">
+      <img src="img/estrenos/15.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-       <figure class="figure">
-      <img src="img/estrenos/16.jpg" class="" alt="..." width="400" height="600">
-	  <figcaption class="figure-caption">Shaman King(2021)</figcaption>
-	  </figure>
-	  <figure class="figure">
-      <img src="img/estrenos/17.jpg" class="" alt="..." width="400" height="600">
-	   <figcaption class="figure-caption">Seirei Gensouki</figcaption>
-	  </figure>
+     <figure class="figure">
+      <img src="img/estrenos/16.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
       <figure class="figure">
-      <img src="img/estrenos/18.jpg" class="" alt="..." width="400" height="600">
-	   <figcaption class="figure-caption">Genjitsushugi Yūsha no Ōkoku Saikenki</figcaption>
-	  </figure>
+      <img src="img/estrenos/17.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
+      <figure class="figure">
+      <img src="img/estrenos/18.jpg" class="img-fluid" alt="..." width="120%">
+      <figcaption class="figure-caption"></figcaption>
+      </figure>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -853,33 +853,39 @@
 				<div class="text-center">
 					<figure class="figure">
 						<img src="img/Anime/JOJO 1-Phantom Blood.jpg" class="figure-img rounded" alt="..." width="200" height="300">
-						<figcaption class="figure-caption">JOJO 1-Phantom Blood</figcaption>
+						<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+						<figcaption class="figure-caption">Part 1-Phantom Blood</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="img/Anime/JOJO 2-Battle Tendency.jpg" class="figure-img rounded" alt="..." width="200"
 							height="300">
-						<figcaption class="figure-caption">JOJO 2-Battle Tendency</figcaption>
+					<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+					<figcaption class="figure-caption">Part 2-Battle Tendency</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="img/Anime/JOJO 3-Stardust Crusaders.jpg" class="figure-img rounded" alt="..." width="200"
 							height="300">
-						<figcaption class="figure-caption">JOJO 3-Stardust Crusaders</figcaption>
+						<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+						<figcaption class="figure-caption">Part 3-Stardust Crusaders T1</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="img/Anime/JOJO 4-Stardust Crusaders 2nd Season.jpg" class="figure-img rounded" alt="..."
 							width="200" height="300">
-						<figcaption class="figure-caption">Stardust Crusaders 2nd Season</figcaption>
+						<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+						<figcaption class="figure-caption">Part 4-Stardust Crusaders T2</figcaption>
 					</figure>
 				</div>
 				<div class="text-center">
 					<figure class="figure">
 						<img src="img/Anime/JOJO 5-Diamond wa Kudakenai.jpg" class="figure-img rounded" alt="..." width="200"
 							height="300">
-						<figcaption class="figure-caption">JOJO 5-Diamond wa Kudakenai</figcaption>
+						<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+						<figcaption class="figure-caption">Part 5-Diamond wa Kudakenai</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="img/Anime/JOJO 6-Ougon no Kaze.jpg" class="figure-img rounded" alt="..." width="200" height="300">
-						<figcaption class="figure-caption">JOJO 6-Ougon no Kaze</figcaption>
+						<figcaption class="figure-caption">JoJo's Bizarre Adventure</figcaption>
+						<figcaption class="figure-caption">Part 6-Ougon no Kaze</figcaption>
 					</figure>
 				</div>
 			</div>
@@ -974,7 +980,7 @@
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Macross 2-Macross-EP 36.jpg" class="figure-img rounded" alt="..." width="200" height="300">
-				<figcaption class="figure-caption">Macrosse</figcaption>
+				<figcaption class="figure-caption">Macross</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Macross 3-Macross Do You Remember Love(Movie 1).jpg" class="figure-img rounded" alt="..."
@@ -1092,21 +1098,25 @@
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 1-Kizumonogatari 1.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Kizumonogatari 1(Movie)</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 2-Kizumonogatari 2.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Kizumonogatari 2(Movie)</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 3-Kizumonogatari 3.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Kizumonogatari 3(Movie)</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 4-Nekomonogatari Kuro.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Nekomonogatari Kuro</figcaption>
 			</figure>
 		</div>
@@ -1114,21 +1124,25 @@
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 5-Bakemonogatari.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Bakemonogatari</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 6-Owarimonogatari.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Owarimonogatari</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 7-Monogatari Series Second Season.jpg" class="figure-img rounded" alt="..."
 					width="200" height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Monogatari Series 2 Season</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 8-Nisemonogatari.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Nisemonogatari</figcaption>
 			</figure>
 		</div>
@@ -1136,16 +1150,19 @@
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 9-Owarimonogatari 2.webp" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Owarimonogatari 2</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 10-Zoku Owarimonogatari.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Zoku Owarimonogatari</figcaption>
 			</figure>
 			<figure class="figure">
 				<img src="img/Anime/Monogatari 11-Hanamonogatari.jpg" class="figure-img rounded" alt="..." width="200"
 					height="300">
+				<figcaption class="figure-caption">Monogatari</figcaption>	
 				<figcaption class="figure-caption">Hanamonogatari</figcaption>
 			</figure>
 		</div>
@@ -1271,7 +1288,7 @@ height="300">
 		<figure class="figure">
 			<img src="img/Anime/Rurouni Kenshin 0.webp" class="figure-img rounded" alt="..."
 				width="200" height="300">
-			<figcaption class="figure-caption">Rurouni Kenshin Ovas</figcaption>
+			<figcaption class="figure-caption">Rurouni Kenshin Ovas(1999)</figcaption>
 		</figure>
 		<figure class="figure">
 			<img src="img/Anime/Rurouni Kenshin 1.webp" class="figure-img rounded" alt="..."
@@ -1281,7 +1298,7 @@ height="300">
 		<figure class="figure">
 			<img src="img/Anime/Rurouni Kenshin 2.webp" class="figure-img rounded" alt="..."
 				width="200" height="300">
-			<figcaption class="figure-caption">Rurouni Kenshin Ovas</figcaption>
+			<figcaption class="figure-caption">Rurouni Kenshin Ovas(2011)</figcaption>
 		</figure>
 		<figure class="figure">
 			<img src="img/Anime/Rurouni Kenshin 3 The Movie.jpg" class="figure-img rounded"
@@ -1294,7 +1311,7 @@ height="300">
 			<figure class="figure">
 				<img src="img/Anime/Rurouni Kenshin 4.jpg" class="figure-img rounded" alt="..."
 					width="200" height="300">
-				<figcaption class="figure-caption">Rurouni Kenshin Ovas</figcaption>
+				<figcaption class="figure-caption">Rurouni Kenshin Ovas(2001)</figcaption>
 			</figure>
 		</div>
 		<div Class="list">
@@ -1482,12 +1499,12 @@ height="300">
 								<figure class="figure">
 									<img src="img/Anime/Yu-Gi-Oh! 0.jpg" class="figure-img rounded"
 											alt="..." width="200" height="300">
-											<figcaption class="figure-caption">Uzaki-chan wa Asobitai</figcaption>
+											<figcaption class="figure-caption">Yu-Gi-Oh! T-Zero</figcaption>
 												</figure>
 													<figure class="figure">
 									<img src="img/Anime/Yu-Gi-Oh! 1.jpg" class="figure-img rounded"
 											alt="..." width="200" height="300">
-											<figcaption class="figure-caption">Uzaki-chan wa Asobitai</figcaption>
+											<figcaption class="figure-caption">Yu-Gi-Oh! Duel Monsters</figcaption>
 												</figure>
 													<figure class="figure">
 									<img src="img/Anime/Yu-Gi-Oh! Movie 1.jpg" class="figure-img rounded"
@@ -1506,12 +1523,12 @@ height="300">
 								<figure class="figure">
 									<img src="img/Anime/Zombieland Saga 1.jpg" class="figure-img rounded"
 											alt="..." width="200" height="300">
-											<figcaption class="figure-caption">Zombieland Saga T1</figcaption>
+											<figcaption class="figure-caption">Zombieland Saga</figcaption>
 												</figure>
 												<figure class="figure">
 									<img src="img/Anime/Zombieland Saga 2 Revenge.jpg" class="figure-img rounded"
 											alt="..." width="200" height="300">
-											<figcaption class="figure-caption">Zombieland Saga 2 Revenge</figcaption>
+											<figcaption class="figure-caption">Zombieland Saga Revenge</figcaption>
 												</figure>
 												</div>
 												<h1>Anime Latino</h1>
