--- a/Sagas Animacion.html
+++ b/Sagas Animacion.html
@@ -16,13 +16,13 @@
   <div class="Background1">
     <div class="img">
       <div>
-      <img src="img/0-Animeteca Logo - copia.png" alt="" width="50%" height="50%">
-      </div>
+		  <img src="img/1.png" class="img-fluid" alt="..." width="50%">
+		 </div>
       <div>
-      <img src="img/3.png" alt="" width="400" height="536">
+	  <img src="img/2.png" class="img-fluid" alt="..." width="25%">
     </div>
     </div>
-  </div>
+</div>
 
   <div class="list">
     <h1>
