--- a/Sagas Comedia.html
+++ b/Sagas Comedia.html
@@ -420,7 +420,7 @@
 <div class="text-center">
 	<div><h1>Mi Pobre Angelito</h1></div>
 	<figure class="figure">
-		<img src="img/comedia/Los locos Addams 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<img src="img/comedia/Mi pobre angelito 1.jpg" class="figure-img rounded"  width="200" height="300">
 		<figcaption class="figure-caption">Mi Pobre Angelito 1</figcaption>
 		<figcaption class="figure-caption">...</figcaption>
 	</figure>
