--- a/index.html
+++ b/index.html
@@ -33,58 +33,44 @@
  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <figure class="figure">
-      <img src="img/estrenos/01.jpg" class="" alt="..." width="400" height="600">
+     <figure class="figure">
+      <img src="img/estrenos/01.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/02.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/02.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/03.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/03.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <figure class="figure">
-      <img src="img/estrenos/04.jpg" class="" alt="..." width="400" height="600">
+     <figure class="figure">
+      <img src="img/estrenos/04.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/05.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/05.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/06.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/06.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
     </div>
-    <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="2000">
      <figure class="figure">
-      <img src="img/estrenos/07.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/07.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/08.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/08.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
       <figure class="figure">
-      <img src="img/estrenos/09.jpg" class="" alt="..." width="400" height="600">
-      <figcaption class="figure-caption"></figcaption>
-      </figure>
-    </div>
-    <div class="carousel-item">
-     <figure class="figure">
-      <img src="img/estrenos/10.jpg" class="" alt="..." width="400" height="600">
-      <figcaption class="figure-caption"></figcaption>
-      </figure>
-      <figure class="figure">
-      <img src="img/estrenos/11.jpg" class="" alt="..." width="400" height="600">
-      <figcaption class="figure-caption"></figcaption>
-      </figure>
-      <figure class="figure">
-      <img src="img/estrenos/12.jpg" class="" alt="..." width="400" height="600">
+      <img src="img/estrenos/09.jpg" class="img-fluid" alt="..." width="120%">
       <figcaption class="figure-caption"></figcaption>
       </figure>
     </div>
@@ -111,7 +97,7 @@
 <div class="navgen">
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="index.html">Peliculas</a>
+    <a class="nav-link e" aria-current="page" href="index.html">Peliculas</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="J-Anime+Live Actions.html">Anime</a>
