--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 	  <img src="img/2.png" class="img-fluid" alt="..." width="25%">
     </div>
     </div>
+     <a href="https://wa.me/+542291517207/?text=Dejanos tu Pedido" target="_blank">
+    <img src="img/WP-logo.png" width="120" height="120">
+ </a>
 </div>
-
 <div>
    <h1 class="list">
      Estrenos 2021
@@ -87,7 +89,9 @@
   </button>
 </div>
 </div>
-
+<div>
+ 
+</div>
 <div>
    <h1 class="list">
      CATALOGO
