--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 	  <img src="img/2.png" class="img-fluid" alt="..." width="25%">
     </div>
     </div>
-     <a href="https://wa.me/+542291517207/?text=Dejanos tu Pedido" target="_blank">
-    <img src="img/WP-logo.png" width="120" height="120">
- </a>
-</div>
+    </div>
 <div>
    <h1 class="list">
      Estrenos 2021
@@ -89,8 +86,10 @@
   </button>
 </div>
 </div>
-<div>
- 
+<div class="btn-whatsapp">
+<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+</a>
 </div>
 <div>
    <h1 class="list">
