logo flotante WP

--- a/J-Cartoons.html
+++ b/J-Cartoons.html
@@ -225,9 +225,12 @@
             <figcaption class="figure-caption">01 a la 03</figcaption>
           </figure>
         </div>
+<div class="btn-whatsapp">
+<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+</a>
+</div>
 
-        </div>
-
-
+</div>
 </body>
 </html>
