--- a/J-Anime+Live Actions.html
+++ b/J-Anime+Live Actions.html
@@ -1534,7 +1534,11 @@ height="300">
 												<h1>Anime Latino</h1>
 										</div>
 </div>
-
+<div class="btn-whatsapp">
+<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+</a>
+</div>
 							
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
