--- a/J-Series.html
+++ b/J-Series.html
@@ -222,7 +222,13 @@
            <figcaption class="figure-caption">Episodios 10</figcaption>
  </figure>
         </div>
-        </div>
-  
+
+        <div class="btn-whatsapp">
+<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+</a>
+</div>
+
+</div>
 </body>
 </html>
