--- a/Sagas Terror.html
+++ b/Sagas Terror.html
@@ -244,7 +244,12 @@
 	</figure>
 </div>
 
+<div class="btn-whatsapp">
+<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+</a>
+</div>
 
- </div> 
+</div> 
 </body>
 </html>
