--- a/Sagas Terror.html
+++ b/Sagas Terror.html
@@ -244,8 +244,34 @@
 	</figure>
 </div>
 
+<div class="text-center">
+	<div><h1>Destino Final</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Final Destination 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Final Destination 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Final Destination 2.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Final Destination 2</figcaption>
+	</figure>
+  <figure class="figure">
+		<img src="img/terror/Final Destination 3.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Final Destination 3</figcaption>
+	</figure>
+	 <figure class="figure">
+		<img src="img/terror/Final Destination 4.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Final Destination 4</figcaption>
+		</figure>
+</div>
+<div class="text-center">
+	<figure class="figure">
+		<img src="img/terror/Final Destination 5.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Final Destination 5</figcaption>
+	</figure>	
+</div>
+
 <div class="btn-whatsapp">
-<a href="https://api.whatsapp.com/send?phone=+54229517207" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=+542291517207" target="_blank">
 <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
 </a>
 </div>
