--- a/Sagas Terror.html
+++ b/Sagas Terror.html
@@ -226,6 +226,138 @@
 </div>
 
 <div class="text-center">
+	<div><h1>Destino Final</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Final Destination 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Destino Final 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Final Destination 2.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Destino Final 2</figcaption>
+	</figure>
+  <figure class="figure">
+		<img src="img/terror/Final Destination 3.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Destino Final 3</figcaption>
+	</figure>
+	 <figure class="figure">
+		<img src="img/terror/Final Destination 4.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Destino Final 4</figcaption>
+		</figure>
+</div>
+<div class="text-center">
+	<figure class="figure">
+		<img src="img/terror/Final Destination 5.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Destino Final 5</figcaption>
+	</figure>	
+</div>
+
+<div class="text-center">
+	<div><h1>Viernes 13</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Viernes 13</figcaption>
+		<figcaption class="figure-caption">Part 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 2.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Viernes 13</figcaption>
+		<figcaption class="figure-caption">Part 2</figcaption>	</figure>
+  <figure class="figure">
+		<img src="img/terror/Friday the 13th 3.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Viernes 13</figcaption>
+		<figcaption class="figure-caption">Part 3</figcaption>
+	</figure>
+	 <figure class="figure">
+		<img src="img/terror/Friday the 13th 4 Capítulo final.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 4:Capítulo final</figcaption>
+	</figure>
+</div>
+<div class="text-center">
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 5 Un Nuevo Comienzo.jpg" class="figure-img rounded"  width="200" height="300">
+  	 <figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 5:Un Nuevo Comienzo</figcaption>	
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 6 Jason Vive.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 6:Jason Vive</figcaption>
+	</figure>
+  <figure class="figure">
+		<img src="img/terror/Friday the 13th 7 La Nueva Sangre.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 7:La Nueva Sangre</figcaption>
+	</figure>
+	 <figure class="figure">
+		<img src="img/terror/Friday the 13th 8 Jason Toma Manhattan.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 8:Jason Toma Manhattan</figcaption>
+	</figure>
+</div>
+<div class="text-center">
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 9 Jason va al Infierno.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 9 :ason va al Infierno</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Friday the 13th 10 Freedy vs Jason.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Freedy vs Jason</figcaption>	
+	</figure>
+  <figure class="figure">
+		<img src="img/terror/Friday the 13th 11 Jason X.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Viernes 13</figcaption>
+	<figcaption class="figure-caption">Part 10:Jason X</figcaption>
+		</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Grindhouse</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Grindhouse Death Proof.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Destino Final 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Grindhouse Planet Terror.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Destino Final 2</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Halloween</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Halloween 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Halloween</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Halloween-2018.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Halloween-2018</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Hatchet</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Hatchet 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Hatchet 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Hatchet 2.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Hatchet 2</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Hatchet 3.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Hatchet 3</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Hatchet 4.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Hatchet 4:Victor Crowley</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
 	<div><h1>La Calle del Terror</h1></div>
 	<figure class="figure">
 		<img src="img/terror/La calle del terror (Parte 1) 1994.jpg" class="figure-img rounded"  width="200" height="300">
@@ -242,32 +374,6 @@
     <figcaption class="figure-caption">La Calle del Terror Part 3</figcaption>
     <figcaption class="figure-caption">1666</figcaption>
 	</figure>
-</div>
-
-<div class="text-center">
-	<div><h1>Destino Final</h1></div>
-	<figure class="figure">
-		<img src="img/terror/Final Destination 1.jpg" class="figure-img rounded"  width="200" height="300">
-		<figcaption class="figure-caption">Final Destination 1</figcaption>
-	</figure>	
-	<figure class="figure">
-		<img src="img/terror/Final Destination 2.jpg" class="figure-img rounded"  width="200" height="300">
-    <figcaption class="figure-caption">Final Destination 2</figcaption>
-	</figure>
-  <figure class="figure">
-		<img src="img/terror/Final Destination 3.jpg" class="figure-img rounded"  width="200" height="300">
-    <figcaption class="figure-caption">Final Destination 3</figcaption>
-	</figure>
-	 <figure class="figure">
-		<img src="img/terror/Final Destination 4.jpg" class="figure-img rounded"  width="200" height="300">
-    <figcaption class="figure-caption">Final Destination 4</figcaption>
-		</figure>
-</div>
-<div class="text-center">
-	<figure class="figure">
-		<img src="img/terror/Final Destination 5.jpg" class="figure-img rounded"  width="200" height="300">
-		<figcaption class="figure-caption">Final Destination 5</figcaption>
-	</figure>	
 </div>
 
 <div class="btn-whatsapp">
